--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-jsx": "^1.2.4",
     "ant-design-vue": "^2.2.8",
+    "lodash": "^4.17.21",
     "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
