--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/node": "^16.11.7",
     "@vitejs/plugin-vue": "^1.9.3",
+    "eslint": "^8.3.0",
+    "eslint-plugin-vue": "^8.1.1",
     "less": "^4.1.2",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
