--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/babel-preset-jsx": "^1.2.4",
     "ant-design-vue": "^2.2.8",
     "lodash": "^4.17.21",
+    "swiper": "^7.3.1",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
     "vue3-colorpicker": "^2.0.3",
